--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: https://asharbutt.github.io/MyWebsite
 
 aux_links:
   Template Repository: https://github.com/asharbutt/MyWebsite
+
+colour-scheme: dark
