--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Quantitative Finance Studies
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
-colour-scheme: dark
+colour_scheme: dark
 
 url: https://asharbutt.github.io/MyWebsite
 
