--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ url: https://asharbutt.github.io/MyWebsite
 aux_links:
   Template Repository: https://github.com/asharbutt/MyWebsite
 
-math_engine: mathjax
 compress_html:
   blanklines: true
+mathjax:
+  source: https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_CHTML
+  config: 'MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } })'
