--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 color_scheme: dark
 
-url: https://asharbutt.github.io/MyWebsite
+url: https://asharbutt.github.io/Research
 
 aux_links:
-  Template Repository: https://github.com/asharbutt/MyWebsite
+  Template Repository: https://github.com/asharbutt/Research
 
 compress_html:
   blanklines: true
