--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Quantitative Finance Studies
+title: My QF Studies
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 color_scheme: dark
